--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "PromptEngine Documentation"
+title: "Overview"
 description: "Comprehensive documentation for PromptEngine - Rails engine for AI prompt management"
 order: 1
 ---
