--- a/content/docs/configuration/api-keys.mdx
+++ b/content/docs/configuration/api-keys.mdx
@@ -11,6 +11,13 @@ PromptEngine allows you to store API keys for the providers you will use in the 
 
 PromptEngine uses Rails' built-in Active Record Encryption to protect sensitive API keys stored in the database. This ensures that even if the database is compromised, the API keys remain encrypted and secure.
 
+<figure>
+  <img src="/images/settings.png" alt="Settings" style={{ borderRadius: '8px', boxShadow: '0 2px 8px rgba(0,0,0,0.08)', maxWidth: '100%' }} />
+  <figcaption style={{ textAlign: 'center', marginTop: '0.5em', color: '#666' }}>
+    <b>Settings</b>
+  </figcaption>
+</figure>
+    
 ### Setup Instructions
 
 #### 1. Generate Encryption Keys
