--- a/content/docs/installation.mdx
+++ b/content/docs/installation.mdx
@@ -92,6 +92,8 @@ Before starting, ensure you have:
     <Callout type="warning">
       Keep your API keys secure! Never commit them to version control.
     </Callout>
+
+    Read more about <Link href="/docs/configuration/api-keys">configuring your API Keys</Link>.
   </Step>
   
   <Step>
@@ -117,6 +119,11 @@ Before starting, ensure you have:
 Now that PromptEngine is installed, you're ready to create your first prompt!
 
 <Cards>
+  <Card 
+    title="Learn about Admin Interface" 
+    description="How does the Admin Interface work and what can it do?"
+    href="/docs/features/admin-interface" 
+  />  
   <Card 
     title="Create Your First Prompt" 
     description="Learn how to create and test a prompt"
